--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   http: ^1.1.0
   permission_handler: ^11.0.1
   tflite_flutter: ^0.11.0
+  image: ^4.1.7
 
 dev_dependencies:
   flutter_test:
